workspace = { members = ["load_env_var_as"] }
[package]
name = "rengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.132.0"
rand = "0.9.2"
memmap2 = "0.9.8"
rayon = "1.11.0"
load_env_var_as = {"path" = "./load_env_var_as"}

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'
strip = 'symbols'