workspace = { members = ["proc_macros"] }
[package]
name = "rengine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
memmap2 = { version = "0.9.9", optional = true }
rayon = "1.11.0"
proc_macros = {"path" = "./proc_macros"}

[features]
benchmark = []
framebuffer = ["dep:memmap2"]
e2e-test = ["dep:memmap2"]
default = ["framebuffer"]

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'
strip = 'symbols'